2017-01-24  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/subsasgn.m: Octave 3.2.x repmat hack

	* arrays/@stk_dataframe/subsasgn.m: Hack for a problem related to
	repmat in Octave 3.2.x.

	Do not use ismatrix.

	* arrays/generic/stk_boundingbox.m: Do not use ismatrix.
	* misc/pareto/stk_dominatedhv.m: Do not use ismatrix.
	* admin/CODING_GUIDELINES: Explain why.
	* misc/error/stk_assert_box.m: Refer to CODING_GUIDELINES.

	stk_example_doe04.m: Do not use ~ to ignore unwanted outputs

	* examples/02_design_of_experiments/stk_example_doe04.m: Do not
	use ~ to ignore unwanted output arguments.
	* admin/CODING_GUIDELINES: Explain why.

	stk_plot1d.m: Ignore legend errors

	* misc/plot/stk_plot1d.m: Ignore legend errors.

2017-01-23  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe: Deprecate info field

	* arrays/@stk_dataframe/stk_sprintf.m: Hide info field.
	* arrays/@stk_factorialdesign/stk_sprintf.m: Hide info field.
	* arrays/@stk_dataframe/stk_sprintf_info.m: Removed (was "internal").
	* arrays/generic/stk_sprintf_info.m: Removed (was "internal").
	* admin/octpkg/INDEX: Remove both functions from the index.
	* core/@stk_model_gpposterior/stk_predict.m: Do not set info.
	* sampling/stk_sampling_halton_rr2.m: Do not set info.
	* sampling/stk_sampling_maximinlhs.m: Do not set info.
	* sampling/stk_sampling_olhs.m: Do not set info.
	* sampling/stk_sampling_randomlhs.m: Do not set info.
	* sampling/stk_sampling_randunif.m: Do not set info.
	* sampling/stk_sampling_regulargrid.m: Do not set info.
	* sampling/stk_sampling_sobol.m: Do not set info.
	* arrays/@stk_dataframe/isequal.m: Ignore info.

	@stk_dataframe/subsref.m: Minor modif to make it work in Octave 3.2.4

	* arrays/@stk_dataframe/subsref.m: Minor modification to make it
	work in Octave 3.2.4 despite a but that allows subsref to modify
	its input argument.

	stk_feval.m: Use commas in cell arrays of function handles
